Worked on Maven Project Post & minor tweaks for QOL

--- a/_posts/2025-11-06-Py-tris.html
+++ b/_posts/2025-11-06-Py-tris.html
@@ -5,7 +5,7 @@ summary: "Side-Project, Learning by How-To Video"
 author: NWMorrison
 date: '2025-06-11 22:15:00 +0530'
 category: ['Python', 'PyGame']
-thumbnail: /assets/img/posts/code.jpg
+thumbnail: /assets/img/tetris.jpg
 keywords: Tetris, Python
 permalink: /projects/PyTris/
 usemathjax: true
@@ -14,3 +14,10 @@ usemathjax: true
 <!--<div class="thumbnail-insert">-->
 <!-- <img src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}" alt=""/>-->
 <!--</div>-->
+
+<div class=justify-content-center" id="blog-post-container">
+
+    <p>Inserting Material Soon</p>
+
+
+</div>
