Added Pytris example video. Some more minor tweaks

--- a/_posts/2025-11-06-Py-tris.html
+++ b/_posts/2025-11-06-Py-tris.html
@@ -11,13 +11,15 @@ permalink: /projects/PyTris/
 usemathjax: true
 ---
 
-<!--<div class="thumbnail-insert">-->
-<!-- <img src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}" alt=""/>-->
-<!--</div>-->
+<h4>Volume Warning</h4>
 
-<div class=justify-content-center" id="blog-post-container">
+<div class="d-flex justify-content-center align-items-center">
+    <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/-Py-tris-"> GitHub Repo </a></p>
+     <hr/>
+</div>
 
-    <p>Inserting Material Soon</p>
-
-
+<div class="d-flex justify-content-center align-items-center" id="pytris-video-container">
+    <video style='height: 50%; width: 50%; object-fit: contain' controls>
+        <source src="/assets/vid/pytris-recording.mp4" type="video/mp4">
+    </video>
 </div>
