--- a/_posts/2025-13-06-Maven-Software-Automation-Testing.html
+++ b/_posts/2025-13-06-Maven-Software-Automation-Testing.html
@@ -12,12 +12,20 @@ usemathjax: true
 ---
 <!--Category shown on front-end-button looks at the first index of the array-->
 
+<!--This className will place our button directly in the middle of our blog post.-->
+<div class="d-flex justify-content-center align-items-center">
+    <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/McTesters"> GitHub Repo </a></p>
+</div>
+
+<div id="flow-diagram-container">
+    <img style='height: 100%; width: 100%; object-fit: contain' src="/assets/img/mcdonalds_test_flow.png"/>
+</div>
+<hr />
+
 <div class="justify-content-center" id="mcTester-post">
+    Below, a YouTube Video showcasing every test case with its respective report at the end of the video.<hr />
 
-    <a class="github-link" href="https://github.com/NWMorrison/McTesters"> Github Repo </a>
-
-    <p>Below, a YouTube Video showcasing every test case with its respective report at the end of the video.</p>
-    <iframe width="800" height="550" src="https://www.youtube.com/embed/O3wEIsXPVO8" title="Software Testing Project: Automation Testing on McDonald&#39;s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
-
+    <div class="responsive-video-container">
+        <iframe src="https://www.youtube.com/embed/O3wEIsXPVO8" title="Software Testing Project: Automation Testing on McDonald&#39;s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 </div>
