--- a/_posts/2025-11-06-Py-tris.html
+++ b/_posts/2025-11-06-Py-tris.html
@@ -14,12 +14,12 @@ usemathjax: true
 <h4>Volume Warning</h4>
 
 <div class="d-flex justify-content-center align-items-center">
-    <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/-Py-tris-"> GitHub Repo </a></p>
-     <hr/>
+    <p> <a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/-Py-tris-"> GitHub Repo </a> </p>
+    <hr/>
 </div>
 
 <div class="d-flex justify-content-center align-items-center" id="pytris-video-container">
     <video style='height: 50%; width: 50%; object-fit: contain' controls>
-        <source src="/assets/vid/pytris-recording.mp4" type="video/mp4">
+        <source src="/assets/vid/pytris-recording.mp4" type="video/mp4"/>
     </video>
 </div>
