--- a/_posts/2025-13-06-Maven-Software-Automation-Testing.html
+++ b/_posts/2025-13-06-Maven-Software-Automation-Testing.html
@@ -17,15 +17,19 @@ usemathjax: true
     <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/McTesters"> GitHub Repo </a></p>
 </div>
 
+<!--Class that sets our flow diagram to auto-adjust with the window size-->
 <div id="flow-diagram-container">
     <img style='height: 100%; width: 100%; object-fit: contain' src="/assets/img/mcdonalds_test_flow.png"/>
 </div>
+
 <hr />
 
+<!--Class that sets our embedded YouTube video to auto-adjust with the window size-->
 <div class="justify-content-center" id="mcTester-post">
     Below, a YouTube Video showcasing every test case with its respective report at the end of the video.<hr />
 
     <div class="responsive-video-container">
         <iframe src="https://www.youtube.com/embed/O3wEIsXPVO8" title="Software Testing Project: Automation Testing on McDonald&#39;s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+
 </div>
