--- a/_posts/2025-11-06-PyTorch-Machine-Learning-Models.html
+++ b/_posts/2025-11-06-PyTorch-Machine-Learning-Models.html
@@ -4,20 +4,18 @@ title:  "PyTorch: Machine Learning Models"
 summary: "Years Worth of Research & Analysis"
 author: NWMorrison
 date: '2025-06-11 03:27:00 +0530'
-category: ['Python' ,'NeuralNetworks', 'PyTorch']
+category: ['Python' ,'Neural-Networks', 'PyTorch']
 thumbnail: /assets/img/neuralNetwork.jpg
 keywords: PyTorch, Machine Learning Models, Python, NeuralNetworks
 permalink: /projects/PyTorch-Machine-Learning-Models/
 usemathjax: true
 ---
-
-
 <div class="d-flex justify-content-center align-items-center">
-    <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/PyTorch-Machine-Learning-Models">GitHub Repo</a></p>
+    <p>
+        <a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/PyTorch-Machine-Learning-Models">GitHub Repo</a>
+    </p>
 </div>
 
-
-
-
 <div class=justify-content-center" id="blog-post-container">
+
 </div>
