--- a/_posts/2025-13-06-Maven-Software-Automation-Testing.html
+++ b/_posts/2025-13-06-Maven-Software-Automation-Testing.html
@@ -14,7 +14,9 @@ usemathjax: true
 
 <!--This className will place our button directly in the middle of our blog post.-->
 <div class="d-flex justify-content-center align-items-center">
-    <p><a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/McTesters"> GitHub Repo </a></p>
+    <p>
+        <a class="btn btn-dark btn-md" href="https://github.com/NWMorrison/McTesters"> GitHub Repo </a>
+    </p>
 </div>
 
 <!--Class that sets our flow diagram to auto-adjust with the window size-->
@@ -26,10 +28,11 @@ usemathjax: true
 
 <!--Class that sets our embedded YouTube video to auto-adjust with the window size-->
 <div class="justify-content-center" id="mcTester-post">
-    Below, a YouTube Video showcasing every test case with its respective report at the end of the video.<hr />
+    Below, a YouTube Video showcasing every test case with its respective report at the end of the video.
+
+    <hr />
 
     <div class="responsive-video-container">
         <iframe src="https://www.youtube.com/embed/O3wEIsXPVO8" title="Software Testing Project: Automation Testing on McDonald&#39;s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-
 </div>
