--- a/_posts/2024-04-25-Text-Mining-NLP-Projects.html
+++ b/_posts/2024-04-25-Text-Mining-NLP-Projects.html
@@ -4,9 +4,9 @@ title:  "Texting Mining & NLP Projects"
 summary: "Showing both projects worked on in Spring 25'."
 author: NWMorrison
 date: '2025-04-25 05:02:00 +0530'
-category: ['Text-Mining', 'NLP', 'Pandas', 'Naive-Bayes', 'Python', 'Regex']
+category: ['Text-Mining', 'NLP', 'Pandas', 'Naive-Bayes', 'Python', 'Regex', 'Scikit-Learn']
 thumbnail: /assets/img/Text-Mining-vs-Natural-Language-Processing-1.jpg
-keywords: Text-Mining, Numpy, Pandas, Naive-Bayes, Python, Regex
+keywords: Text-Mining, Numpy, Pandas, Naive-Bayes, Python, Regex, Scikit-Learn
 permalink: /projects/Text-Mining/
 usemathjax: true
 ---
