--- a/_posts/2024-11-20-Data-Mining-Projects.html
+++ b/_posts/2024-11-20-Data-Mining-Projects.html
@@ -4,9 +4,9 @@ title:  "Data Mining Projects"
 summary: "Showcasing both projects I have worked on in the past."
 author: NWMorrison
 date: '2024-11-20 05:02:00 +0530'
-category: ['Data-Mining', 'Numpy', 'Pandas', 'Neural-Networks', 'Python']
+category: ['Data-Mining', 'Numpy', 'Pandas', 'Neural-Networks', 'Python', 'Scikit-Learn']
 thumbnail: /assets/img/data-mining.png
-keywords: Data-Mining, Numpy, Pandas, NeuralNetworks, Python
+keywords: Data-Mining, Numpy, Pandas, NeuralNetworks, Python, Scikit-Learn
 permalink: /projects/Data-Mining/
 usemathjax: true
 ---
